assets/css/main.css
/* ... */
.parent {
    display: grid;
    grid-template-columns: 33% 1fr;
    grid-template-rows: 1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    margin: 30px 0;
}

.main-img {
    height: 200px;
    width: 300px;
    border-radius: 15px;
    object-fit: contain;
}

.div1 {
    grid-area: 1 / 1 / 2 / 2;
    text-align: center;
}

.div2 {
    grid-area: 1 / 2 / 2 / 3;
    padding-left: 10px;
}

.main-h2 {
    color: #516096;
    font-size: 1.4em;
}

.main-h3 {
    color: darkkhaki;
    font-size: 1.05em;
}

.main-h4 {
    color: #2e3141;
    font-size: .95em;
}

.main-p {
    color: #2e3141;
}

@media screen and (max-width: 1023px) {
    .parent {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(2, 50%);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
        margin: 100px 0;
    }
    .div1 {
        grid-area: 1 / 1 / 2 / 2;
    }
    .div2 {
        grid-area: 2 / 1 / 3 / 2;
        padding-left: 0;
    }
    .main-img {
        display: inline-block;
    }
    .main-h2 {
        text-align: center;
        padding-top: 50px;
    }
}

@media screen and (max-width: 426px) {
    .main-h2 {
        margin-top: -50px;
        text-align: left;
    }
    .parent {
        margin: 100px 0;
        padding: 0;
    }
    .div2 {
        padding-left: 0;
    }
}

/*************
* Projects Section
*************/

#projects {
    background-color: #fff;
    text-align: center;
}

#projects h1 {
    text-align: left;
    padding: 60px 0 20px 0;
}

.projects-p-subtitle {
    text-align: center;
}

.modal-full {
    width: 95%;
}

.modal-full .modal-content {
    min-height: 95vh;
}

.project-h2 {
    color: white;
    font-size: 30px;
    text-align: center;
    transition: .5s ease;
}

.center-container {
    position: relative;
    text-align: center;
}

.center-projects {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, 120%);
}

.parent-projects {
    display: inline-grid;
    grid-template-columns: repeat(4, 1fr);
    grid-column-gap: 60px;
    grid-row-gap: 0px;
    padding-bottom: 60px;
}

.div1-projects {
    background: #516096;
    height: 300px;
    width: 300px;
    border-radius: 30px;
}

.div2-projects {
    background: #516096;
    height: 300px;
    width: 300px;
    border-radius: 30px;
}

.div1-projects:hover, .div2-projects:hover {
    box-shadow: none;
}

.div1-projects:hover, .div2-projects:hover {
    box-shadow: none;
}

@media screen and (max-width: 3000px) {
    .center-word-counter {
        transform: translate(-50%, 300%);
    }
}

@media screen and (max-width: 769px) {
    .center-word-counter {
        transform: translate(-50%, 120%);
    }
}

@media screen and (max-width: 769px) {
    .parent-projects {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
    }
    .div1-projects {
        grid-area: 1 / 1 / 2 / 2;
    }
    .div2-projects {
        grid-area: 1 / 2 / 2 / 3;
    }
}

@media screen and (max-width: 426px) {
    .parent-projects {
        display: grid;
        grid-template-columns: 100%;
        grid-template-rows: repeat(4, 1fr);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
    }
    .div1-projects {
        grid-area: 1 / 1 / 2 / 2;
    }
    .div2-projects {
        grid-area: 2 / 1 / 3 / 2;
    }
}

.img-projects {
    height: 100%;
    width: 100%;
}


/*************
* Section Class
*************/

/*
.section-class:before {
    content: "";
    display: block;
    height: 60px;
    margin-top: -60px;
    visibility: hidden;
}
*/

/*************
* About Section
*************/

#about {
    background-color: #516096;
}

#about h2 {
    text-transform: uppercase;
}

.parent-about {
    display: grid;
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: 1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
}

.div1-about {
    grid-area: 1 / 1 / 2 / 2;
    padding: 5%;
}

.div2-about {
    grid-area: 1 / 2 / 2 / 3;
    padding: 5%;
}

@media screen and (max-width: 769px) {
    .parent-about {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(2, 1fr);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
    }
    .div1-about {
        grid-area: 1 / 1 / 2 / 2;
    }
    .div2-about {
        grid-area: 2 / 1 / 3 / 2;
    }
}

tr {
    border-bottom: 1px solid #2e3141;
}

.tr-last {
    border-bottom: none;
}

td, th {
    padding: 20px 30px 20px 0;
}

th {
    float: left;
    /* safari fix */
}

#whoami {
    display: inline-block; 
    min-height: 40px;
}

.about-h3 {
    display: grid;
    color: #fff;
    text-align: left;
}

.about-p {
    color: #fff;
}
/*************
* Blog
*************/

#blog {
    background-color: #fff;
    background-image: url("../img/blog-background.jpg");
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 470px;
    box-shadow: 0 3000px rgba(255, 255, 255, 0.3) inset;
}

#blog h2 {
    text-align: center;
    text-transform: uppercase;
    padding: 15px 0;
}

#blog ul li {
    list-style: none;
    text-align: center;
    padding: 10px 0;
    text-transform: uppercase;
    font-size: 1.5em;
}

#blog ul a {
    color: #2e3141;
}

#blog ul a:hover {
    color: #2e3141;
    opacity: 1;
}

@media screen and (max-width: 1000px) {
    #blog ul li {
        font-size: 1em;
    }
}

@media screen and (max-width: 426px) {
    #blog ul li {
        font-size: .9em;
    }
}

@media screen and (max-width: 321px) {
    #blog ul li {
        font-size: .8em;
    }
}

/*************
* Footer
*************/

footer {
    height: 100px;
    width: 100%;
    background-color: #2e3141;
    text-align: center;
}

footer p {
    padding-top: 40px;
    color: #fff;
}

